# neural_network

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.MD  global.cpp  global.h  main.cpp  utils.cpp  utils.h
Testing/Temporary/: CTestCostData.txt
dataset_readers/: DatasetImage.cpp  DatasetImage.h  MNISTReader.cpp  MNISTReader.h
destinations/: DummyDestination.h  DummyDestintion.cpp  ImageDestination.cpp  ImageDestination.h  destination.h
logging/: log.h
logs/: rotating.txt
math/: activations.h  math.h
mempool/: DynamicMempool.cpp  DynamicMempool.h  Mempool.h  counting_mem_allocator.cpp  counting_mem_allocator.h
mempool/data/: Chunk.cpp  Chunk.h  Image.cpp  Image.h  gzChunk.cpp  gzChunk.h
narray/: narray.cpp  narray.h  narray_coord.cpp  narray_coord.h
neural_network/: Layer.cpp  Layer.h  Network.cpp  Network.h  Network_2.cpp  Network_2.h  Perceptron.cpp  Perceptron.h  fully_connected_layer.cpp  fully_connected_layer.h
neural_network/activations/: activations_holder.cpp  activations_holder.h
neural_network/layers/: hidden_layer.cpp  hidden_layer.h  input_layer.cpp  input_layer.h  layer.cpp  layer.h  output_layer.cpp  output_layer.h
pipes/: FilePipe.cpp  FilePipe.h  FunctionalPipe.cpp  FunctionalPipe.h  GzPipe.cpp  GzPipe.h  Pipe.cpp  Pipe.h
profiling/: time_profiling.cpp  time_profiling.h
sources/: source.cpp  source.h
sources/mnist/: MNISTsource.cpp  MNISTsource.h
test/: char_sigmoid_test.cpp  char_to_double_conversion.cpp  copy_constructor_test.cpp  float_sigmoid_test.cpp  main_test.cpp  narray_feedforward_test.cpp  narray_test_blas.cpp  narray_test_bracket_operator.cpp  narray_test_dot_product.cpp  narray_test_dot_product_1.cpp  narray_test_dot_product_1_1.cpp  narray_test_dot_product_2.cpp  narray_test_dot_product_3.cpp  narray_test_dot_product_4.cpp  narray_test_dot_product_5.cpp  narray_test_fill_predefined_values.cpp  narray_test_fill_predefined_values_1.cpp  narray_test_float.cpp  narray_test_iterator.cpp  narray_test_matmul.cpp  narray_test_matsum.cpp  narray_test_maxarg.cpp  narray_test_maxarg_1.cpp  narray_test_mempool.cpp  narray_test_minus_assign.cpp  narray_test_transpose.cpp  narray_test_update_weight.cpp  narray_test_zip_different_sizes.cpp  narray_transform_function.cpp  narray_weight_test.cpp  narray_zip_test.cpp  neuronet_test_train.cpp  neuronet_test_train_1.cpp  neuronet_test_train_2.cpp  neuronet_test_train_3.cpp  test_narray.cpp
threadpool/: ThreadPool.cpp  ThreadPool.h
tools/: ArchiveDecompressor.cpp  ArchiveDecompressor.h  FileDownloader.cpp  FileDownloader.h
utils/: ByteBuffer.h  Void.h  narray_util.cpp  narray_util.h  vector_util.h  zip_iterator.h  zipper.h
